tests/negative/interpolation_impure_call.osc
// EXPECT ERROR: Interpolated expressions must remain pure and cannot call fn! functions.

fn! next_id() -> i32 {
    7
}

fn! main() {
    println("id={next_id()}");
}
